# llm-context-forge-py

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_results.txt
.github/workflows/: release.yml  test.yml
api/: app.py
contextforge/: __init__.py  chunker.py  compressor.py  context.py  cost.py  models.py  tokenizer.py
contextforge/api/: app.py
contextforge/api/routes/: __init__.py  chunker.py  compression.py  context.py  cost.py  tokenizer.py
contextforge/cli/: main.py
data/: .gitkeep
docs/: api-reference.md  architecture.md  cli-reference.md  getting-started.md  index.md
examples/: basic_token_counting.py  chat_history_management.py  cost_optimization.py  document_ingestion_pipeline.py  rag_context_assembly.py
models/: .gitkeep
notebooks/: .gitkeep
src/: __init__.py  chunker.py  compressor.py  context.py  tokenizer.py
src/layoutlm_forge/: __init__.py  chunker.py  compressor.py  context.py  cost.py  tokenizer.py
src/layoutlm_forge/api/: app.py
src/layoutlm_forge/api/routes/: __init__.py  chunker.py  compression.py  context.py  cost.py  tokenizer.py
src/layoutlm_forge/cli/: main.py
src/llm_context_forge/: __init__.py  chunker.py  compressor.py  context.py  cost.py  models.py  tokenizer.py
src/llm_context_forge/api/: app.py  schemas.py
src/llm_context_forge/api/routes/: __init__.py  chunker.py  compression.py  context.py  cost.py  tokenizer.py
src/llm_context_forge/cli/: main.py
tests/: conftest.py  test_api.py  test_chunker.py  test_compressor.py  test_context.py  test_tokenizer.py
tests/fixtures/: sample_data.py
tests/integration/: test_api_endpoints.py  test_full_pipeline.py
tests/performance/: test_benchmarks.py
tests/unit/: test_chunker.py  test_compressor.py  test_context.py  test_cost.py  test_models.py  test_tokenizer.py
